# TurboStructred

./: .gitignore  BlasiusAxis.mcr  CMakeLists.txt  README.md  TurboStructured.sln
TurboStructured/: ClassDiagram.cd  ClassDiagram1.cd  ClassDiagram2.cd  CompareSlice.mcr  ENOCharactVars.h  TurboStructured.vcxproj  TurboStructured.vcxproj.filters  showInit.mcr
src/: main.cpp
src/BoundaryConditions/: BCGeneral.h  BCGeneralBarotropic.h  BoundaryCondition.h  BoundaryConditionConfiguration.h  IBoundaryCondition.h
src/CUDA/: CUDAManager.cu  CUDAManager.cu.h
src/EquationsOfState/: BaratropicEOS.h  BarotropicEOS.h  EquationsOfState.h  generalEOS.h  idealGasEOS.h
src/Methods/: ExplicitRungeKuttaFVM.h  HybridFVM.h  Method.h  MethodConfiguration.h
src/Reconstruction/: ENO2CharactVars.h  ENO2PointsStencil.h  ENO3PointsStencil.h  IReconstruction.h  Linear2PointsStencil.h  Linear2psLim.h  PiecewiseConstant.h  ReconstructorsList.h  WENO2PointsStencil.h  WENO3Order.h
src/RiemannSolvers/: GodunovSolverPerfectGasEOS.h  RiemannSolver.h  RiemannSolversList.h  RoeSolverPerfectGasEOS (Конфликтующая копия с компьютера Sega 2015-09-10).h  RoeSolverPerfectGasEOS.h
src/Sensors/: CellMultiSensor.h  CellSensor.h  MValuePosSensor.h  MValuePosXSensor.h  MValuePosXSensor2.h  Sensor.h  Sensors.h
src/Tests/: tests.h
src/kernel/: GasProperties.h  KernelConfiguration.h  ParallelManager (Конфликтующая копия с компьютера Sega 2015-09-11).h  ParallelManager.h  grid.h  kernel.h
src/utility/: Constants.h  Direction.h  GeomFunctions.h  GradientComputer.h  Integration.h  Limiters.h  Matrix.h  (+6 more)
(+26 files in other folders)
